syntax = "proto3";

package blog;

option java_package = "com.proto.blog";
option java_multiple_files = true;

import "google/protobuf/empty.proto";

message Blog{
  string id = 1;
  string author = 2;
  string title = 3;
  string content = 4;
}

// this is used to return the blogid since
// we can't return string
message BlogId{
  string id = 1;
}

service BlogService {
  rpc createBlog(Blog) returns (BlogId);
  rpc readBlog(BlogId) returns (Blog);
  rpc updateBlog(Blog) returns (google.protobuf.Empty); // returns an empty object
  rpc deleteBlog(BlogId) returns (google.protobuf.Empty);
  rpc listBlogs(google.protobuf.Empty) returns (stream Blog); // list all the blogs
}